# loki-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: pr-build.yml  release.yml
src/: git.rs  main.rs  pruning.rs  vars.rs  worktree.rs
src/git/: pruning.rs
