[package]
name = "loki-cli"
version = "0.4.0"
authors = ["Kyle W. Rader"]
description = "A CLI for Git Productivity"
homepage = "https://github.com/kyle-rader/loki-cli"
repository = "https://github.com/kyle-rader/loki-cli"
readme = "README.md"
license = "MIT"
keywords = ["git", "productivity"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
test-case = "2.0.0"
