[package]
name = "loki-cli"
version = "0.7.1"
authors = ["Kyle W. Rader"]
description = "Loki: 🚀 A Git productivity tool"
homepage = "https://github.com/kyle-rader/loki-cli"
repository = "https://github.com/kyle-rader/loki-cli"
readme = "README.md"
license = "MIT"
keywords = ["git", "productivity"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "unicode", "env"] }

[dev-dependencies]
test-case = "3.3.1"
